Fix for Android OS
font-size was too big, so it was too zoomed in. Seems ok on WP still?

--- a/css/menus.css
+++ b/css/menus.css
@@ -102,7 +102,8 @@ body.mobile .menu {
     right: 0;
     height: auto;
     width: 100%;
-    font-size: 2.8em;
+    /* font-size: 2.8em; */
+    font-size: 1.4em;
 }
 
 body.mobile canvas {
